orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Activity__c/Activity__c.object-meta.xml
<CustomObject>
    <description>Sales activities - calls, emails, meetings - BlackRoad General CRM</description>
    <label>Activity</label>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>