orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Activity__c/fields/Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date__c</fullName>
    <label>Activity Date</label>
    <type>DateTime</type>
</CustomField>