orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Activity__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Call</fullName><default>false</default><label>Call</label></value>
            <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
            <value><fullName>Meeting</fullName><default>false</default><label>Meeting</label></value>
            <value><fullName>Demo</fullName><default>false</default><label>Demo</label></value>
            <value><fullName>Presentation</fullName><default>false</default><label>Presentation</label></value>
            <value><fullName>Note</fullName><default>false</default><label>Note</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>