orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Activity__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <type>Lookup</type>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
</CustomField>