orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Activity__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <label>Deal</label>
    <type>Lookup</type>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
</CustomField>