orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Activity__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>No Answer</fullName><default>false</default><label>No Answer</label></value>
            <value><fullName>Left Voicemail</fullName><default>false</default><label>Left Voicemail</label></value>
            <value><fullName>Rescheduled</fullName><default>false</default><label>Rescheduled</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>